--- a/webproject_1/main/templates/complete.html
+++ b/webproject_1/main/templates/complete.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <html>
   <head>
-    <title>pyftp</title>
+    <title>complete</title>
   </head>
 
   <body>
@@ -25,4 +25,3 @@
     </center>
   </body>
 </html>
-
