--- a/webproject_1/main/templates/complete.html
+++ b/webproject_1/main/templates/complete.html
@@ -23,8 +23,12 @@
       발주파일.json 다운로드 -->
       <a href="{{ url_for('static', filename = 'gen_files/발주파일.json') }}" download="발주파일.json">발주파일.json</a>
       <br>
-      물류파일 다운로드 -->
+      물류파일.xlsx 다운로드 -->
       <a href="{{ url_for('static', filename = 'gen_files/물류파일.xlsx') }}" download="물류파일.xlsx">물류파일.xlsx</a>
+      <br>
+      물류파일.json 다운로드 -->
+      <a href="{{ url_for('static', filename = 'gen_files/물류파일.json') }}" download="물류파일.json">발주파일.json</a>
+      <br>
     </center>
   </body>
 </html>
