--- a/webproject_1/main/templates/index.html
+++ b/webproject_1/main/templates/index.html
@@ -6,8 +6,7 @@
   </head>
 
   <body>
-    <center><h1>Transform Excel File!</h1></center>
-    <center><a href="/">홈페이지</a><br><center>
+    <center><h1>AgencyTeam assignment</h1></center>
     <hr width="100%" color="black"/>
     <center><h3>Upload File!</h3></center>
     <hr width="100%" color="black"/>
