--- a/webproject_1/main/templates/base.html
+++ b/webproject_1/main/templates/base.html
@@ -5,27 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bare - Start Bootstrap Template</title>
+        <title>에이전시팀 X 데청캠</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename = 'assets/favicon.ico') }}" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <!-- Bootstrap css -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
 
     <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">AgencyTeam X 데청캠</a>
+            <a class="navbar-brand" href="/">AgencyTeam X 데청캠</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">메인</a>
+                  <a class="nav-link" href="/">메인</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">발주</a>
+                  <a class="nav-link" href="/order">발주</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">물류</a>
@@ -40,9 +40,5 @@
         <!-- Page content-->
         {% block content %}
         {% endblock %}
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="{{ url_for('static', filename = 'js/scripts.js') }}"></script>
     </body>
 </html>
