--- a/webproject_1/main/templates/base.html
+++ b/webproject_1/main/templates/base.html
@@ -28,10 +28,10 @@
                   <a class="nav-link" href="/order">발주</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">물류</a>
+                  <a class="nav-link" href="/distribution">물류</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">업로드</a>
+                  <a class="nav-link" href="/upload">업로드</a>
                 </li>
               </ul>
             </div>
