--- a/webproject_1/main/templates/main.html
+++ b/webproject_1/main/templates/main.html
@@ -10,8 +10,8 @@
                     <br>
                     <hr width="100%" color="black"/>
                     <button type="button" onclick="location.href='order'" class="btn btn-dark">발주파일</button>
-                    <button type="button" onclick="location.href='#'" class="btn btn-dark">물류파일</button>
-                    <button type="button" onclick="location.href='#'" class="btn btn-dark">업로드파일</button>
+                    <button type="button" onclick="location.href='distribution'" class="btn btn-dark">물류파일</button>
+                    <button type="button" onclick="location.href='upload'" class="btn btn-dark">업로드파일</button>
                     <!-- <a href="#" class="button Rectangle black">발주파일</a>
                     <a href="#" class="button Rectangle black">물류파일</a>
                     <a href="#" class="button Rectangle black">업로드파일</a> -->
