--- a/webproject_1/main/templates/order_complete.html
+++ b/webproject_1/main/templates/order_complete.html
@@ -8,7 +8,7 @@
       <li class="breadcrumb-item active" aria-current="page">완료</li>
     </ol>
   </nav>
-  <center><h3>Transform Completed File!</h3></center>
+  <center><h3>Transform Complete</h3></center>
   <hr width="100%" color="black"/>
 
   <img src="{{ url_for('static', filename = 'images/excel.png') }}", width="100" 
