--- a/webproject_1/main/templates/order_complete.html
+++ b/webproject_1/main/templates/order_complete.html
@@ -19,9 +19,9 @@
     <a href="{{ url_for('static', filename = 'files/gen_files/발주파일.xlsx') }}" download>
       <button type="button" class="btn btn-primary btn-lg">발주파일.xlsx</button>
     </a>
-    <a href="{{ url_for('static', filename = 'files/gen_files/발주파일.json') }}" download>
+    <!-- <a href="{{ url_for('static', filename = 'files/gen_files/발주파일.json') }}" download>
       <button type="button" class="btn btn-secondary btn-lg">발주파일.json</button>
-    </a>
+    </a> -->
   </center>
 </body>
 {% endblock %}
