--- a/transform/templates/order/order.html
+++ b/transform/templates/order/order.html
@@ -1,126 +1,132 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="container-fluid bg-dark">
-    <center>
-      <br><legend><p class="text-white fs-2">Upload file for order</p></legend><br>
-      <img src="{{ url_for('static', filename = 'img/excel.png') }}", width="100" 
-        style="margin-left: auto; margin-right: auto; display: block;")/><br>
-    </center>
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
-        <form action = "{{ url_for('order.order_complete') }}" method = "POST" enctype = "multipart/form-data">
-          <p class="text-white fs-5">1. Excel file select</p>
-          <p class="fs-6 text-white">
-            * 필수 입력 *<br>
-            - xlsx, xls 형식의 파일만 선택 가능<br>
-            - 필수 시트 이름 : 주문정보, 마스터파일
-          </p>
-          <div class="mb-4">
-            <input class="form-control" type="file" id="formFile" name="file" required>
-          </div>
-          <p class="text-white fs-5">2. Orderer information</p>
-          <p class="fs-6 text-white">
-            - Input 칸에 값을 입력하지 않을 시 default 값으로 입력됨
-          </p>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 성명</span>
-            <input type="text" class="form-control" name="or_name" placeholder="에이전시팀">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 전화번호</span>
-            <input type="text" class="form-control" name="or_call" placeholder="010-3311-7252">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 휴대폰</span>
-            <input type="text" class="form-control" name="or_phone" placeholder="010-3311-7252">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 이메일</span>
-            <input type="email" class="form-control" name="or_email" placeholder="jiyeon@agencyteam.co.kr">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 우편번호</span>
-            <input type="text" class="form-control" name="or_post" placeholder="18469">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 고정주소</span>
-            <input type="text" class="form-control" name="or_addr" placeholder="경기 화성시 영천동 362-2">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">주문자 상세주소</span>
-            <input type="text" class="form-control" name="or_detail_addr" placeholder="동익미라벨타워 13층 1319호">
-          </div>
-          <p class="text-white fs-5">3. Recipient information</p>
-          <p class="fs-6 text-white">
-            - Input 칸에 값을 입력하지 않을 시 default 값으로 입력됨
-          </p>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 성명</span>
-            <input type="text" class="form-control" name="re_name">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 전화번호</span>
-            <input type="text" class="form-control" name="re_call">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 휴대폰</span>
-            <input type="text" class="form-control" name="re_phone">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 이메일</span>
-            <input type="email" class="form-control" name="re_email">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 우편번호</span>
-            <input type="text" class="form-control" name="re_post">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 고정주소</span>
-            <input type="text" class="form-control" name="re_addr">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">수령자 상세주소</span>
-            <input type="text" class="form-control" name="re_detail_addr">
-          </div>
-          <p class="text-white fs-5">4. Other information</p>
-          <p class="fs-6 text-white">
-            - Input 칸에 값을 입력하지 않을 시 default 값으로 입력됨
-          </p>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">상점ID</span>
-            <input type="text" class="form-control" name="shopid">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">업체 코드</span>
-            <input type="text" class="form-control" name="c_code">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">외부몰 부주문 코드</span>
-            <input type="text" class="form-control" name="other_or_code">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">환율</span>
-            <input type="text" class="form-control" name="ex_rate">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">165</span>
-            <input type="text" class="form-control" name="165">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">LF CJ운송장</span>
-            <input type="text" class="form-control" name="LF">
-          </div>
-          <div class="input-group mb-3">
-            <span class="w-25 input-group-text" id="basic-addon1">SF EXPRESS 운송장</span>
-            <input type="text" class="form-control" name="SF">
-          </div>
-          <center><button type="submit" class="btn btn-secondary btn-lg">Upload</button><br></center>
-          <br>
-        </form>
-      </div>
-      <div class="col-md-3"></div>
+<div class="container-fluid bg-dark">
+  <center>
+    <br>
+    <legend>
+      <p class="text-white fs-2">Upload file for order</p>
+    </legend><br>
+    <img src="{{ url_for('static', filename = 'img/excel.png') }}" , width="100"
+      style="margin-left: auto; margin-right: auto; display: block;" ) /><br>
+  </center>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <form action="{{ url_for('order.order_complete') }}" method="POST" enctype="multipart/form-data">
+        <p class="text-white fs-5">1. Excel file select</p>
+        <p class="fs-6 text-white">
+          * 필수 입력 *<br>
+          - xlsx, xls 형식의 파일만 선택 가능<br>
+          - 필수 시트 이름 : 주문정보, 마스터파일<br>
+          - 입력된 값들은 모두 일괄 적용됨.
+        </p>
+        <div class="mb-4">
+          <input class="form-control" type="file" id="formFile" name="file" required>
+        </div>
+        <p class="text-white fs-5">2. Orderer information</p>
+        <p class="fs-6 text-white">
+          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨<br>
+          - 전화번호 ex) 010-1234-5678
+        </p>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 성명</span>
+          <input type="text" class="form-control" name="주문자 성명">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 전화번호</span>
+          <input type="text" class="form-control" name="주문자 전화번호">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 휴대폰</span>
+          <input type="text" class="form-control" name="주문자 휴대폰">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 이메일</span>
+          <input type="email" class="form-control" name="주문자 이메일">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 우편번호</span>
+          <input type="text" class="form-control" name="주문자 우편번호">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 고정주소</span>
+          <input type="text" class="form-control" name="주문자 고정주소">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">주문자 상세주소</span>
+          <input type="text" class="form-control" name="주문자 상세주소">
+        </div>
+        <p class="text-white fs-5">3. Recipient information</p>
+        <p class="fs-6 text-white">
+          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨.<br>
+          - 전화번호 ex) 010-1234-5678
+        </p>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 성명</span>
+          <input type="text" class="form-control" name="수령자 성명">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 전화번호</span>
+          <input type="text" class="form-control" name="수령자 전화번호">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 휴대폰</span>
+          <input type="text" class="form-control" name="수령자 휴대폰">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 이메일</span>
+          <input type="email" class="form-control" name="수령자 이메일">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 우편번호</span>
+          <input type="text" class="form-control" name="수령자 우편번호">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 고정주소</span>
+          <input type="text" class="form-control" name="수령자 고정주소">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">수령자 상세주소</span>
+          <input type="text" class="form-control" name="수령자 상세주소">
+        </div>
+        <p class="text-white fs-5">4. Other information</p>
+        <p class="fs-6 text-white">
+          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨.
+        </p>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">상점ID</span>
+          <input type="text" class="form-control" name="상점ID">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">업체 코드</span>
+          <input type="text" class="form-control" name="업체 코드">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">외부몰 부주문 코드</span>
+          <input type="text" class="form-control" name="외부몰 부주문 코드">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">환율</span>
+          <input type="text" class="form-control" name="환율">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">165</span>
+          <input type="text" class="form-control" name="165">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">LF CJ운송장</span>
+          <input type="text" class="form-control" name="LF CJ운송장">
+        </div>
+        <div class="input-group mb-3">
+          <span class="w-25 input-group-text" id="basic-addon1">SF EXPRESS 운송장</span>
+          <input type="text" class="form-control" name="SF EXPRESS 운송장">
+        </div>
+        <center><button type="submit" class="btn btn-secondary btn-lg">Upload</button><br></center>
+        <br>
+      </form>
     </div>
+    <div class="col-md-3"></div>
   </div>
+</div>
 {% endblock %}
