--- a/transform/templates/base.html
+++ b/transform/templates/base.html
@@ -10,9 +10,11 @@
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename = 'assets/favicon.ico') }}" />
   <!-- Bootstrap css -->
-  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}">
+  <link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet">
+    
   <!-- Bootstrap js -->
   <script src="{{ url_for('static', filename = 'js/bootstrap.bundle.min.js') }}"></script>
+    
 </head>
 
 <body>
