--- a/transform/templates/upload/upload.html
+++ b/transform/templates/upload/upload.html
@@ -2,20 +2,19 @@
 
 {% block content %}
     <div class="bg-dark">
-        <center><h3><p class="text-white">Upload File!</p></h3></center>
+        <center><h3><p class="text-white">Upload Brand Data for Server!</p></h3></center>
         <br>
-        <img src="{{ url_for('static', filename = 'img/decant.png') }}", width="100" 
+        <img src="{{ url_for('static', filename = 'img/decant.png') }}", width="200" 
             style="margin-left: auto; margin-right: auto; display: block;")/>
         
         <div class="container">
             <br><br>
             <form action = "{{ url_for('upload.upload_complete') }}" method = "POST" enctype = "multipart/form-data">
             <div class="input-group mb-3 mx-auto w-25">
-                <div class="input-group-prepend text-light">
-                    <input type="file" name = "file" >
+                <div class="mb-4">
+                    <input class="form-control" type="file"  name="file" required>
                 </div>
             </div>
-            <br>
             <div class="mx-auto w-25">
                 <div class="form-check">
                 <input class="form-check-input" type="checkbox" name="server" value="Domestic" id="defaultCheck1">
@@ -30,8 +29,9 @@
                     <label class="form-check-label text-left text-light" for="defaultCheck1">중국(위챗) 서버</label>
                 </div>
                 </div>
-            <br>
-            <div class="text-center"><input type="submit" value="변환" class="btn btn-secondary"></div>
+            <br><br>
+            <div class="text-center"><input type="submit" value="Upload" class="btn btn-secondary"></div>
+            <br><br>
             </form>
         </div>
     </div>
