--- a/transform/templates/order/order.html
+++ b/transform/templates/order/order.html
@@ -18,8 +18,9 @@
         <p class="fs-6 text-white">
           * 필수 입력 *<br>
           - xlsx, xls 형식의 파일만 선택 가능<br>
-          - 필수 시트 이름 : 주문정보, 마스터파일<br>
-          - 입력된 값들은 모두 일괄 적용됨.
+          - 주문 정보가 담긴 시트 이름 : 주문정보<br>
+          - 마스터파일 정보가 담긴 시트 이름 : 마스터파일<br>
+          - 입력된 값들은 모두 일괄 적용됨
         </p>
         <div class="mb-4">
           <input class="form-control" type="file" id="formFile" name="file" required>
@@ -59,7 +60,7 @@
         </div>
         <p class="text-white fs-5">3. Recipient information</p>
         <p class="fs-6 text-white">
-          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨.<br>
+          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨<br>
           - 전화번호 ex) 010-1234-5678
         </p>
         <div class="input-group mb-3">
@@ -92,7 +93,7 @@
         </div>
         <p class="text-white fs-5">4. Other information</p>
         <p class="fs-6 text-white">
-          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨.
+          - Input 칸에 값을 입력하지 않을 시 빈 값으로 입력됨
         </p>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">상점ID</span>
