--- a/transform/templates/order/order_complete.html
+++ b/transform/templates/order/order_complete.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-  <center><h3>Transform Complete</h3></center>
-  <hr width="100%" color="black"/>
-  <img src="{{ url_for('static', filename = 'img/excel.png') }}", width="100" 
-      style="margin-left: auto; margin-right: auto; display: block;")/>
-  <br><br>
-  <center>
-    <a href="{{ url_for('static', filename = 'files/order.xlsx') }}" download>
-      <button type="button" class="btn btn-primary btn-lg">발주파일</button>
-    </a>
-  </center>
-  <script>
-    function test() {
-      window.open("{{ url_for('static', filename = 'files/order.xlsx') }}")
-    }
-    test()
-  </script>
+<div class="container-fluid bg-dark">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col align-self-center" style="padding: 10% 0px 22% 0px;">
+      <center>
+        <p class="text-white fs-5">Transform Complete</p>
+      </center>
+      <img src="{{ url_for('static', filename = 'img/excel.png') }}" , width="100"
+        style="margin-left: auto; margin-right: auto; display: block;" ) />
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
+<script>
+  function test() {
+    window.open("{{ url_for('static', filename = 'files/발주파일.xlsx') }}")
+  }
+  test()
+</script>
 {% endblock %}
