--- a/transform/templates/order/order.html
+++ b/transform/templates/order/order.html
@@ -13,7 +13,8 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-      <form action="{{ url_for('order.order_complete') }}" method="POST" enctype="multipart/form-data">
+      <form action="{{ url_for('order.order_complete') }}?name={{ file_name }}" method="POST"
+        enctype="multipart/form-data">
         <p class="text-white fs-5">1. Excel file select</p>
         <p class="fs-6 text-white">
           * 필수 입력 *<br>
