--- a/transform/templates/order/order_complete.html
+++ b/transform/templates/order/order_complete.html
@@ -9,13 +9,19 @@
       </center>
       <img src="{{ url_for('static', filename = 'img/excel.png') }}" , width="100"
         style="margin-left: auto; margin-right: auto; display: block;" ) />
+      <br>
+      <center>
+        <a href="{{ url_for('download', filename=filename) }}" download>
+          <button type="button" class="btn btn-primary">발주파일</button>
+        </a>
+      </center>
     </div>
     <div class="col"></div>
   </div>
 </div>
 <script>
   function test() {
-    window.open("{{ url_for('static', filename = 'files/발주파일.xlsx') }}")
+    window.open("{{ url_for('download', filename=filename) }}")
   }
   test()
 </script>
