--- a/transform/templates/distribution/distribution.html
+++ b/transform/templates/distribution/distribution.html
@@ -53,7 +53,16 @@
                         <span class="w-25 input-group-text" id="basic-addon1">Country/Region</span>
                         <input type="text" class="form-control" name = "Country/Region" placeholder="Korea"> <!--default값 China?-->
                     </div>
-                    
+                    <div class="input-group mb-3">
+                        <span class="w-25 input-group-text" id="basic-addon1">Email</span>
+                        <input type="text" class="form-control" name = "Email">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="w-25 input-group-text" id="basic-addon1">Postal Code</span>
+                        <input type="text" class="form-control" name = "Postal Code">
+                    </div>
+
+
                     <p class="text-white fs-5">3. Receiver's Information</p>
                     <div class="input-group mb-3">
                         <span class="w-25 input-group-text" id="basic-addon1">Receiver Customer Account No.</span>
