--- a/transform/templates/base.html
+++ b/transform/templates/base.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>에이전시팀 X 데청캠</title>
+  <title>Agency Team</title>
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename = 'assets/favicon.ico') }}" />
   <!-- Bootstrap css -->
   <link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet">
-    
+
   <!-- Bootstrap js -->
   <script src="{{ url_for('static', filename = 'js/bootstrap.bundle.min.js') }}"></script>
-    
+
 </head>
 
 <body>
@@ -22,19 +22,19 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="/">Agency Team</a>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item dropdown">
+          {% if g.user %}
+          <li class="nav-item dropstart">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              Page Link
+              관리자 기능 &nbsp;
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/order">Order File</a></li>
-              <li><a class="dropdown-item" href="/distribution">Distribution File</a></li>
-              <li><a class="dropdown-item" href="/upload">Upload File</a></li>
+              <li><a class="dropdown-item" href="/">...</a></li>
             </ul>
           </li>
+          {% endif %}
         </ul>
         <ul class="navbar-nav">
           {% if g.user %}
@@ -63,8 +63,8 @@
   <!-- footer -->
   <footer class="bg-dark text-center text-white">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      <p class="fst-italic">Developer : 장성태 이성수 신지은 서혜원</p>
-      <p class="fst-italic">© 2021 Copyright : Agency Team x 데이터청년캠퍼스[서울여대]</p>
+      <br>
+      <p class="fst-italic">© 2021 Copyright : AgencyTeam x 데이터청년캠퍼스[서울여대]</p>
     </div>
   </footer>
 </body>
