--- a/transform/templates/upload/upload_complete.html
+++ b/transform/templates/upload/upload_complete.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container-fluid bg-dark">
     <center><h3><p class="text-white">Download File!</p></h3></center>
     <br>
     <img src="{{ url_for('static', filename = 'img/excel.png') }}", width="100" 
@@ -21,5 +22,6 @@
             {% endif %}
         </div>
     <br>
+    </div>
     </div>
 {% endblock %}
