--- a/transform/templates/upload/upload.html
+++ b/transform/templates/upload/upload.html
@@ -12,7 +12,8 @@
             <form action = "{{ url_for('upload.upload_complete') }}" method = "POST" enctype = "multipart/form-data">
             <div class="input-group mb-3 mx-auto w-25">
                 <div class="mb-4">
-                    <input class="form-control" type="file"  name="file" accept=".zip" required>
+                    <!-- <input class="form-control" type="file"  name="file" accept=".zip" required> -->
+                    <input class="form-control" type="file" name="file" accept=".xlsx" required>
                 </div>
             </div>
             <div class="mx-auto w-25">
