발주, 물류 default 값 수정기능
클라이언트에서 default 값들 수정 가능하게 함.

--- a/transform/templates/base.html
+++ b/transform/templates/base.html
@@ -31,7 +31,9 @@
               관리자 기능 &nbsp;
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/">...</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('order.order_default_update') }}">발주파일 기본값 수정</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('distribution.distribution_default_update') }}">물류파일 기본값
+                  수정</a></li>
             </ul>
           </li>
           {% endif %}
