--- a/transform/templates/distribution/distribution.html
+++ b/transform/templates/distribution/distribution.html
@@ -5,20 +5,19 @@
     <center>
         <br>
         <legend>
-            <p class="text-white fs-1">Upload File for Distribution</p>
+            <p class="text-white fs-2">Upload File for Distribution</p>
         </legend><br>
         <img src="{{ url_for('static', filename = 'img/excel.png') }}" , width="100"
             style="margin-left: auto; margin-right: auto; display: block;" ) /><br>
     </center>
-    <center>
-        <p class="text-white fs-6">
-            * 수정이 필요한 항목이나 추가할 항목의 값만 입력해주세요.<br>
-            * 값을 입력하지 않으면 기본값 또는 공백으로 입력됩니다.<br>
-        </p>
-    </center>
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
+            <p class="fs-6 text-white">
+                - (필수) xlsx, xls 형식의 파일만 선택 가능<br>
+                - (필수) 시트이름을 적어주세요.<br>
+                - 입력 칸이 비어있으면 빈 칸으로 입력됩니다.<br>
+            </p>
             <form action="{{url_for('distribution.distribution_complete')}}" method="POST"
                 enctype="multipart/form-data">
                 <p class="text-white fs-5">1. Excel file select</p>
@@ -27,100 +26,109 @@
                 </div>
                 <p class="text-white fs-5">2. Excel file sheet name</p>
                 <div class="input-group mb-3">
-                    <span class="w-25 input-group-text" id="basic-addon1">order sheet</span>
-                    <input type="text" class="form-control" name="sheet" placeholder="ex) secoo주문영문" required>
+                    <span class="w-25 input-group-text" id="basic-addon1">주문정보 시트</span>
+                    <input type="text" class="form-control" name="sheet" placeholder="ex) secoo주문영문"
+                        value="{{data['sheet']}}">
                 </div>
                 <p class="text-white fs-5">3. Shipper's information</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon3">Customer Account No.</span>
-                    <input type="text" class="form-control" name="Customer Account No." placeholder="">
+                    <input type="text" class="form-control" name="Customer Account No." placeholder=""
+                        value="{{data['Customer Account No.']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Company Name</span>
-                    <input type="text" class="form-control" name="Company Name" placeholder="">
+                    <input type="text" class="form-control" name="Company Name" placeholder=""
+                        value="{{data['Company Name']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Contact Name</span>
                     <input type="text" class="form-control" value="Jiyeon Song" name="Contact Name"
-                        placeholder="Jiyeon Song">
+                        placeholder="Jiyeon Song" value="{{data['Contact Name']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Tel</span>
-                    <input type="text" class="form-control" value="821033117252" name="Tel" placeholder="821033117252">
+                    <input type="text" class="form-control" value="821033117252" name="Tel" placeholder="821033117252"
+                        value="{{data['Tel']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Address</span>
                     <input type="text" class="form-control" name="Address"
                         value="Room 1319, Mirabell tower 13F, 362-2, Yeongcheon-dong"
-                        placeholder="Room 1319, Mirabell tower 13F, 362-2, Yeongcheon-dong">
+                        placeholder="Room 1319, Mirabell tower 13F, 362-2, Yeongcheon-dong" value="{{data['Address']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">City</span>
-                    <input type="text" class="form-control" name="City" value="Hwaseong-si" placeholder="Hwaseong-si">
+                    <input type="text" class="form-control" name="City" placeholder="Hwaseong-si"
+                        value="{{data['City']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Province</span>
-                    <input type="text" class="form-control" name="Province" value="Gyeonggi-do"
+                    <input type="text" class="form-control" name="Province" value="{{data['Province']}}"
                         placeholder="Gyeonggi-do">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Country/Region</span>
-                    <input type="text" class="form-control" name="Country/Region" value="Korea" placeholder="Korea">
+                    <input type="text" class="form-control" name="Country/Region" value="{{data['Country/Region']}}"
+                        placeholder="Korea">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Email</span>
-                    <input type="text" class="form-control" name="Email">
+                    <input type="text" class="form-control" name="Email" value="{{data['Email']}}">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Postal Code</span>
-                    <input type="text" class="form-control" name="Postal Code" value="18469" placeholder="18469">
+                    <input type="text" class="form-control" name="Postal Code" value="{{data['Postal Code']}}"
+                        placeholder="18469">
                 </div>
 
 
                 <p class="text-white fs-5">4. Receiver's Information</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Receiver Country/Region</span>
-                    <input type="text" name="Receiver Country/Region" value="China" class="form-control"
-                        placeholder="China">
+                    <input type="text" name="Receiver Country/Region" value="{{data['Receiver Country/Region']}}"
+                        class="form-control" placeholder="China">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Receiver Credentials Type</span>
-                    <input type="text" name="Receiver Credentials Type" value="ID" class="form-control"
-                        placeholder="ID">
+                    <input type="text" name="Receiver Credentials Type" value="{{data['Receiver Credentials Type']}}"
+                        class="form-control" placeholder="ID">
                 </div>
 
                 <p class="text-white fs-5">5. Description of Contents</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Currency</span>
-                    <input type="text" name="Currency" value="CNY" class="form-control" placeholder="CNY">
+                    <input type="text" name="Currency" value="{{data['Currency']}}" class="form-control"
+                        placeholder="CNY">
                 </div>
 
                 <p class="text-white fs-5">6. Shipment Type</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Shipment Type</span>
-                    <input type="text" name="Shipment Type" class="form-control"
-                        value="International Standard Express - Parcel"
+                    <input type="text" name="Shipment Type" class="form-control" value="{{data['Shipment Type']}}"
                         placeholder="International Standard Express - Parcel">
                 </div>
 
                 <p class="text-white fs-5">7. Shipment Details</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Total Package</span>
-                    <input type="text" name="Total Package" class="form-control" value="1" placeholder="1">
+                    <input type="text" name="Total Package" class="form-control" value="{{data['Total Package']}}"
+                        placeholder="1">
                 </div>
                 <p class="text-white fs-5">8. District Code</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Self Pickup</span>
-                    <input type="text" name="Self Pickup" class="form-control">
+                    <input type="text" name="Self Pickup" class="form-control" value="{{data['Self Pickup']}}">
                 </div>
                 <p class="text-white fs-5">9. Payment of Freight Charges</p>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Payment Method</span>
-                    <input type="text" name="Payment Method" class="form-control" value="Shipper" placeholder="Shipper">
+                    <input type="text" name="Payment Method" class="form-control" value="{{data['Payment Method']}}"
+                        placeholder="Shipper">
                 </div>
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Account No.</span>
-                    <input type="text" name="Account No." class="form-control" value="0825004317"
+                    <input type="text" name="Account No." class="form-control" value="{{data['Account No.']}}"
                         placeholder="0825004317">
                 </div>
                 <!-- <div class="input-group mb-3">
@@ -129,7 +137,8 @@
                     </div> -->
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Tax payment</span>
-                    <input type="text" name="Tax payment" class="form-control" value="Shipper" placeholder="Shipper">
+                    <input type="text" name="Tax payment" class="form-control" value="{{data['Tax payment']}}"
+                        placeholder="Shipper">
                 </div>
 
                 <!-- <p class="text-white fs-5">10. Commercial Invoice</p>
@@ -228,13 +237,14 @@
                     </div> -->
                 <div class="input-group mb-3">
                     <span class="w-25 input-group-text" id="basic-addon1">Notify to pick up</span>
-                    <input type="text" name="Notify to pick up" class="form-control" value="NO" placeholder="NO">
+                    <input type="text" name="Notify to pick up" class="form-control"
+                        value="{{data['Notify to pick up']}}" placeholder="NO">
                 </div>
                 <!-- <div class="input-group mb-3">
                         <span class="w-25 input-group-text" id="basic-addon1">Formal Customs Declaration For Import</span>
                         <input type="text" name="Formal Customs Declaration For Import" class="form-control">
                     </div> -->
-                <center><button type="submit" class="btn btn-secondary btn-lg">업로드</button><br></center>
+                <center><button type="submit" class="btn btn-secondary btn-lg">Upload</button><br></center>
             </form>
         </div>
         <div class="col-md-3"></div>
