--- a/transform/templates/order/order.html
+++ b/transform/templates/order/order.html
@@ -27,100 +27,102 @@
         <p class="text-white fs-5">2. Excel file sheet name</p>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문정보 시트</span>
-          <input type="text" class="form-control" name="주문시트" placeholder="ex) secoo주문영문" required>
+          <input type="text" class="form-control" name="주문시트" value="{{ data['주문시트'] }}" placeholder="ex) secoo주문영문"
+            required>
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">마스타파일 시트</span>
-          <input type="text" class="form-control" name="마스타시트" placeholder="ex) 마스타파일" required>
+          <input type="text" class="form-control" name="마스타시트" value="{{ data['마스타시트'] }}" placeholder="ex) 마스타파일"
+            required>
         </div>
         <p class="text-white fs-5">3. Orderer information</p>
         <p class="fs-6 text-white">
         </p>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 이름</span>
-          <input type="text" class="form-control" name="주문자 이름" value="에이전시팀">
+          <input type="text" class="form-control" name="주문자 이름" value="{{ data['주문자 이름'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 전화번호</span>
-          <input type="text" class="form-control" name="주문자 전화번호" value="010-3311-7252">
+          <input type="text" class="form-control" name="주문자 전화번호" value="{{ data['주문자 전화번호'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 휴대폰</span>
-          <input type="text" class="form-control" name="주문자 휴대폰" value="010-3311-7252">
+          <input type="text" class="form-control" name="주문자 휴대폰" value="{{ data['주문자 휴대폰'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 이메일</span>
-          <input type="email" class="form-control" name="주문자 이메일" value="jiyeon@agencyteam.co.kr">
+          <input type="email" class="form-control" name="주문자 이메일" value="{{ data['주문자 이메일'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 우편번호</span>
-          <input type="text" class="form-control" name="주문자 우편번호" value="18469">
+          <input type="text" class="form-control" name="주문자 우편번호" value="{{ data['주문자 우편번호'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 고정주소</span>
-          <input type="text" class="form-control" name="주문자 고정주소" value="경기도 화성시 동탄기흥로 560">
+          <input type="text" class="form-control" name="주문자 고정주소" value="{{ data['주문자 고정주소'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">주문자 상세주소</span>
-          <input type="text" class="form-control" name="주문자 상세주소" value="605호">
+          <input type="text" class="form-control" name="주문자 상세주소" value="{{ data['주문자 상세주소'] }}">
         </div>
         <p class="text-white fs-5">4. Recipient information</p>
         <p class="fs-6 text-white">
         </p>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 이름</span>
-          <input type="text" class="form-control" name="수령자 이름" value="에이전시팀">
+          <input type="text" class="form-control" name="수령자 이름" value="{{ data['수령자 이름'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 전화번호</span>
-          <input type="text" class="form-control" name="수령자 전화번호" value="010-3311-7252">
+          <input type="text" class="form-control" name="수령자 전화번호" value="{{ data['수령자 전화번호'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 휴대폰</span>
-          <input type="text" class="form-control" name="수령자 휴대폰" value="010-3311-7252">
+          <input type="text" class="form-control" name="수령자 휴대폰" value="{{ data['수령자 휴대폰'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 이메일</span>
-          <input type="email" class="form-control" name="수령자 이메일" value="jiyeon@agencyteam.co.kr">
+          <input type="email" class="form-control" name="수령자 이메일" value="{{ data['수령자 이메일'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 우편번호</span>
-          <input type="text" class="form-control" name="수령자 우편번호" value="18469">
+          <input type="text" class="form-control" name="수령자 우편번호" value="{{ data['수령자 우편번호'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 고정주소</span>
-          <input type="text" class="form-control" name="수령자 고정주소" value="경기도 화성시 동탄기흥로 560">
+          <input type="text" class="form-control" name="수령자 고정주소" value="{{ data['수령자 고정주소'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">수령자 상세주소</span>
-          <input type="text" class="form-control" name="수령자 상세주소" value="605호">
+          <input type="text" class="form-control" name="수령자 상세주소" value="{{ data['수령자 상세주소'] }}">
         </div>
         <p class="text-white fs-5">5. Other information</p>
         <p class="fs-6 text-white">
         </p>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">상점ID</span>
-          <input type="text" class="form-control" name="상점ID">
+          <input type="text" class="form-control" name="상점ID" value="{{ data['상점ID'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">업체 코드</span>
-          <input type="text" class="form-control" name="업체 코드">
+          <input type="text" class="form-control" name="업체 코드" value="{{ data['업체 코드'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">외부몰 부주문 코드</span>
-          <input type="text" class="form-control" name="외부몰 부주문 코드">
+          <input type="text" class="form-control" name="외부몰 부주문 코드" value="{{ data['외부몰 부주문 코드'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">환율</span>
-          <input type="text" class="form-control" name="환율" value="165">
+          <input type="text" class="form-control" name="환율" value="{{ data['환율'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">LF CJ운송장</span>
-          <input type="text" class="form-control" name="LF CJ운송장">
+          <input type="text" class="form-control" name="LF CJ운송장" value="{{ data['LF CJ운송장'] }}">
         </div>
         <div class="input-group mb-3">
           <span class="w-25 input-group-text" id="basic-addon1">SF EXPRESS 운송장</span>
-          <input type="text" class="form-control" name="SF EXPRESS 운송장">
+          <input type="text" class="form-control" name="SF EXPRESS 운송장" value="{{ data['SF EXPRESS 운송장'] }}">
         </div>
         <center><button type="submit" class="btn btn-secondary btn-lg">Upload</button><br></center>
         <br>
