--- a/app/transform/templates/upload/upload.html
+++ b/app/transform/templates/upload/upload.html
@@ -5,14 +5,18 @@
         <div class="row">
             <div class="col"></div>
             <div class="col">
-            <center><h2><p class="text-white">Upload Brand Data for Server!</p></h2></center>
+            <center><br>
+                <legend>
+                <p class="text-white fs-2">Upload Brand Data for Server</p>
+                </legend><br>
+            </center>
             <br>
             <img src="{{ url_for('static', filename = 'img/decant.png') }}", width="200" style="margin-left: auto; margin-right: auto; display: block;")/>
             
             <div class="col" style="padding: 10% 0px 22% 0px;" >
                 <br><br>
                 <form action = "{{ url_for('upload.upload_complete') }}" method = "POST" enctype = "multipart/form-data">
-                <div class="input-group">
+                <div class="input-group w-150">
                     <div class="mb-4">
                         <input class="form-control" type="file" name="file" accept=".xlsx" required>
                     </div>
